force-app/main/default/objects/Ledger__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>IF((TEXT(Type__c) = &apos;Asset&apos; || TEXT(Type__c) = &apos;Expense&apos;),  Debit__c - Credit__c, Credit__c - Debit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>