force-app/main/default/objects/Ledger__c/fields/Finance_Account__c.field-meta.xml
<CustomField>
    <fullName>Finance_Account__c</fullName>
    <label>Finance Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Finance Accounts can be related to Ledgers</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Finance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ledgers</relationshipLabel>
    <relationshipName>Ledgers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>