force-app/main/default/objects/Ledger__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <formula>CASE(Sub_Type__c,
&apos;Bank&apos;, &apos;Current&apos;,
&apos;Cash&apos;, &apos;Current&apos;,
&apos;Pension&apos;, &apos;Future&apos;,
&apos;Credit&apos;, &apos;Current&apos;,
&apos;Balance&apos;, &apos;Current&apos;,
&apos;Position&apos;, &apos;Current&apos;,
&apos;Receivable&apos;, &apos;Current&apos;,
&apos;Payable&apos;, &apos;Current&apos;,
CASE(Term__c,
&apos;Short&apos;, &apos;Current&apos;,
&apos;Long&apos;, &apos;Future&apos;,
&apos;&apos;))</formula>
    <label>Forecast</label>
    <type>Text</type>
</CustomField>