force-app/main/default/objects/Ledger__c/fields/Ledger_Id__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ledger Id</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>