force-app/main/default/objects/Ledger__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>