force-app/main/default/objects/Ledger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ledger_Id__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Balance__c</columns>
    <columns>Credit__c</columns>
    <columns>Debit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>