force-app/main/default/objects/Ledger__c/listViews/Liability_Ledgers.listView-meta.xml
<ListView>
    <fullName>Liability_Ledgers</fullName>
    <columns>NAME</columns>
    <columns>Ledger_Id__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Forecast__c</columns>
    <columns>Credit__c</columns>
    <columns>Debit__c</columns>
    <columns>Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Liability</value>
    </filters>
    <label>Liability Ledgers</label>
</ListView>